--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - name: Activate Hermit
+        uses: cashapp/activate-hermit@v1.1.4
         with:
-          go-version: '1.22'
+          cache: "true"
 
       - name: Run tests
-        run: go test -v ./...
+        run: task test
 
   release:
     name: Release
@@ -35,10 +35,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - name: Activate Hermit
+        uses: cashapp/activate-hermit@v1.1.4
         with:
-          go-version: '1.22'
+          cache: "true"
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
