ci: expand build targets and enable automatic releases
- Add linux and windows platforms to build matrix
- Include amd64 architecture alongside arm64
- Exclude windows/arm64 combination
- Change draft mode from true to false for automatic release creation

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,9 +10,15 @@ builds:
     env:
       - CGO_ENABLED=0
     goos:
+      - linux
       - darwin
+      - windows
     goarch:
+      - amd64
       - arm64
+    ignore:
+      - goos: windows
+        goarch: arm64
     ldflags:
       - -s -w
       - -X main.Version={{.Version}}
@@ -35,5 +41,5 @@ changelog:
       - "^test:"
 
 release:
-  draft: true
+  draft: false
   prerelease: auto
