--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,24 @@ jobs:
           echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --import --batch --yes
           gpg --list-secret-keys --keyid-format LONG
 
+      - name: Export GPG key for signing
+        run: |
+          # Configure GPG for non-interactive use
+          export GPG_TTY=$(tty)
+          echo "allow-loopback-pinentry" > ~/.gnupg/gpg-agent.conf
+          gpg-connect-agent reloadagent /bye
+
+          # Export the key to a file for GoReleaser to use
+          echo "${{ secrets.NFPM_PASSPHRASE }}" | gpg --batch --yes --pinentry-mode loopback \
+            --passphrase-fd 0 --armor --export-secret-keys > /tmp/gpg-private.key
+          echo "GPG_KEY_PATH=/tmp/gpg-private.key" >> $GITHUB_ENV
+
+      - name: Setup APK signing key
+        run: |
+          # Generate RSA key for APK signing
+          echo "${{ secrets.APK_PRIVATE_KEY }}" > /tmp/apk-signing.key
+          echo "APK_KEY_PATH=/tmp/apk-signing.key" >> $GITHUB_ENV
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
@@ -54,5 +72,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
+          GPG_KEY_PATH: ${{ env.GPG_KEY_PATH }}
+          APK_KEY_PATH: ${{ env.APK_KEY_PATH }}
           NFPM_PASSPHRASE: ${{ secrets.NFPM_PASSPHRASE }}
 
