--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -142,3 +142,6 @@ changelog:
 release:
   draft: false
   prerelease: auto
+  extra_files:
+    - glob: ./dist/keys/*
+      name_template: "{{ .ProjectName }}-{{ .Tag }}-{{ .ArtifactName }}"
